Deleted all user's files, Added routes to contacts and update swagger file
