# routes/contacts.js
@@ -1,10 +1,16 @@
 const express = require('express')
 const router = express.Router()
 
-const contactsController = require('../controllers/contacts')
+const contactController = require('../controllers/contacts')
 
-router.get('/', contactsController.getAll)
+router.get('/', contactController.getAll)
 
-router.get('/:id', contactsController.getSingle)
+router.get('/:id', contactController.getSingle)
+
+router.post('/', contactController.createContact)
+
+router.put('/:id', contactController.updateContact)
+
+router.delete('/:id', contactController.deleteContact)
 
 module.exports = router
