# routes/index.js
@@ -7,7 +7,6 @@ router.get('/', (req, res) => {
     res.send('Project 1 - CSE 341: Web Services')
 })
 
-router.use('/users', require('./users'))
 router.use('/contacts', require('./contacts'))
 
 
